--- a/Exercise 2/index.html
+++ b/Exercise 2/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise 2</title>
     <style>
-        .first{
-            color: red;
-            background-color: yellow;
-        }
-        div > p{
+        p{
+            
             color: white;
             background-color: blue;
+        }
+        div > p:first-child{
+            color: red;
+            background-color: yellow;
         }
 
     </style>
