--- a/CSS Sizing/index.html
+++ b/CSS Sizing/index.html
@@ -7,8 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab vel ullam in, doloribus nesciunt ipsam nobis unde cupiditate debitis corporis laborum fuga rerum molestiae illo aperiam neque sed iure tempora nihil! Fuga nihil obcaecati sunt consequuntur libero sint, earum reiciendis molestias illum dignissimos beatae ut qui exercitationem quaerat. Consequatur, laudantium? Obcaecati excepturi harum ducimus ex dignissimos! Voluptate laboriosam nostrum quae optio amet beatae, error, consequatur facere ullam velit, quod possimus deserunt eum excepturi? Exercitationem similique laudantium eius, ipsum aut ipsam necessitatibus suscipit quidem id totam iusto atque, repudiandae iste! Doloribus reiciendis sit vel incidunt doloremque beatae laborum saepe laboriosam, unde totam, architecto voluptatibus repudiandae voluptate accusantium! Delectus est officia consequatur deserunt eos! Dolores accusamus eligendi ut. Voluptatum fugiat fuga dolore sunt ipsa!
+    <div class="box1">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab vel ullam in, doloribus nesciunt ipsam nobis unde cupiditate debitis corporis laborum fuga rerum molestiae illo aperiam neque sed iure tempora nihil! Fuga nihil obcaecati sunt consequuntur libero sint, earum reiciendis molestias illum dignissimos beatae ut qui exercitationem quaerat. Consequatur, laudantium? Obcaecati excepturi harum d
+    </div>
+    <div style="width: 50vh; border: 2px solid red; height: 400px; font-size: 12px;">
+        Lorem ipsum dolor sit amet.
+        <div style="width: 50%; border: 2px solid red; height: 50%; font-size: 2em;">
+            Lorem ipsum dolor sit amet.
+            <div style="width: 50%; border: 2px solid red; height: 50%; font-size: 2em;">Lorem ipsum dolor sit amet.</div>
+        </div>
     </div>
 </body>
 </html>
