--- a/Exercise 4/index.html
+++ b/Exercise 4/index.html
@@ -35,6 +35,10 @@
             background-color: var(--seccolor);
             color: whitesmoke;
         }
+        a{
+            color: var(--textcolor);
+            text-decoration: none;
+        }
         @media screen and (max-width: 390px) {
             body{
                 flex-direction: column;
@@ -49,9 +53,9 @@
 </head>
 <body>
     <nav>
-        <div class="ele">Home</div>
-        <div class="ele">About</div>
-        <div class="ele">Contact</div>
+        <div class="ele" style="margin-left: 30px;"><a href="/">Home</a></div>
+        <div class="ele"><a href="/">About</a></div>
+        <div class="ele"><a href="/">Contact</a></div>
     </nav>
 </body>
 </html>
