--- a/Exercise 10/index.html
+++ b/Exercise 10/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercise 10</title>
     <script src="script.js"></script>
 </head>
 <body>
-
 </body>
 </html>
