--- a/_demo/index.html
+++ b/_demo/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    <style>
+        .box{
+            width: 300px;
+            height: 200px;
+            border: 2px solid black;
+        }
+    </style>
+    
 </head>
 <body>
-
+    <div class="box" ></div>
+    <script src="script.js"></script>
 </body>
 </html>
