--- a/Practise set 8/index.html
+++ b/Practise set 8/index.html
@@ -4,8 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Practise set 8</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- <button onclick="alert('Getting your Thai Cuisine')">Thai</button>
+  <button onclick="alert('Here\'s your Chinese dishes' )">Chinese</button>
+  <button onclick="alert('Ah! Man of Culture I see')">Vada Paw</button> -->
+
+  <!-- <a target="_blank" href="https://www.google.com/"><button>Google</button></a>
+  <a target="_blank" href="https://www.google.com/maps"><button>Maps</button></a>
+  <a target="_blank" href="https://www.apple.com/"><button>Apple</button></a> -->
+
+  <!-- <button id="google">Google</button>
+  <button id="fb">Facebook</button>
+  <button id="maps">Maps</button> -->
+
+  <div class="bulb-container">Hi, this is a div!</div>
+
   <script src="script.js"></script>
 </body>
 </html>
